--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"example.aternos.ip",
-	"port": "25565",
-	"name": "afkbot1",
+	"ip":"LongVek168.aternos.me",
+	"port": "12495",
+	"name": "IQGAMINGKHYT999",
 	"auto-night-skip":"true"
 }
