--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"LongVek168.aternos.me",
-	"port": "12495",
-	"name": "IQGAMINGKHYT999",
+	"ip":"Meysmp.aternos.me",
+	"port": "55213",
+	"name": "BROHACK",
 	"auto-night-skip":"true"
 }
