--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"Meysmp.aternos.me",
-	"port": "55213",
-	"name": "BROHACK",
+	"ip":"sg1.falixserver.net",
+	"port": "25778",
+	"name": "Bot",
 	"auto-night-skip":"true"
 }
